# claude-skills

./: .gitignore
atmega4809-xplained-pro/: SKILL.md  atmega4809-xplained-pro-skill.org
googAppsScript/: README.md  SPECIFICATION.org  pyproject.toml
googAppsScript/.claude/skills/: gas-integration.md
googAppsScript/docs/: quickstart.md  user-guide.md
googAppsScript/gas_skill/: __init__.py  __main__.py  _subprocess.py  changelog.py  clasp_wrapper.py  config.py  exceptions.py  gas_skill.py  git_manager.py  log_parser.py  manifest.py  models.py  runner.py
googAppsScript/tests/: conftest.py  test_changelog.py  test_clasp_wrapper.py  test_config.py  test_git_manager.py  test_log_parser.py  test_manifest.py  test_models.py  test_runner.py  test_subprocess.py
quickBooksAPI/: SKILL.md
quickBooksAPI/references/: entities.md  gas-patterns.md  oauth2.md  queries.md
